[package]
name = "gentor"
version = "0.1.0"
edition = "2021"
description = "🧠 Simple interactive AI coding agent CLI written in Rust"
license = "MIT"
repository = "https://github.com/GNDFR/gentor"
homepage = "https://github.com/GNDFR/gentor"
readme = "README.md"
keywords = ["ai", "cli", "rust", "openai", "coding"]
categories = ["command-line-utilities", "ai"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-openai = "0.30.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.27"
tui = "0.19"
